--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.12.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
