--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^4.0.0",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
