--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-rating": "^2.0.5",
+    "react-responsive": "^10.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.0",
