--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^4.0.0",
     "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
+    "emailjs": "^4.0.3",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.12",
     "localforage": "^1.10.0",
