--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "emailjs": "^4.0.3",
     "firebase": "^10.12.2",
+    "firebaseui": "^6.1.0",
     "framer-motion": "^11.2.12",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
